--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http:
+  flutter_spinkit: ^5.2.0
+  page_transition: ^2.0.9
+  loading_animation_widget:
 
 dev_dependencies:
   flutter_test:
